--- a/app/design/adminhtml/default/default/layout/realtimedespatch.xml
+++ b/app/design/adminhtml/default/default/layout/realtimedespatch.xml
@@ -8,6 +8,11 @@
             </action>
         </reference>
     </adminhtml_system_config_edit>
+    <adminhtml_bulkexport_index>
+        <reference name="content">
+            <block type="realtimedespatch/adminhtml_bulk_export_view" name="catalog" />
+        </reference>
+    </adminhtml_bulkexport_index>
     <adminhtml_productexports_index>
         <reference name="content">
             <block type="realtimedespatch/adminhtml_exports" name="exports" />
