--- a/app/design/adminhtml/default/default/template/realtimedespatch/bulk/export/view/plane.phtml
+++ b/app/design/adminhtml/default/default/template/realtimedespatch/bulk/export/view/plane.phtml
@@ -9,8 +9,8 @@
                     <label><b><?php echo __('Last Executed') ?></b></label>
                 </td>
                 <td class="value">
-                    <?php $executed = $this->getExport()->getExecuted(); ?>
-                    <?php echo $executed ? Mage::helper('core')->formatDate($executed, 'full', TRUE) : 'N/A'; ?>
+                    <?php $executed = $this->getExport()->getExecuted() ? new \DateTime($this->getExport()->getExecuted()) : null; ?>
+                    <?php echo $executed ? $executed->format('jS M Y') : 'N/A'; ?>
                 </td>
             </tr>
         </table>
