Update Support Message

--- a/app/design/adminhtml/default/default/template/realtimedespatch/system/config/fieldset/hint.phtml
+++ b/app/design/adminhtml/default/default/template/realtimedespatch/system/config/fieldset/hint.phtml
@@ -5,12 +5,7 @@
     <p>
         <?php echo $this->__('A module provided for Realtime Despatch by the Magento agency <a target="_blank" href="%s"><strong>SixBySix</strong></a>', 'http://www.sixbysix.co.uk'); ?>.
     </p>
-	<!--
     <p>
-        <?php echo $this->__("Need assistance? <a target=\"_blank\" href=\"https://realtime-despatch-magento-module.codebasehq.com\">Submit a ticket</a>"); ?>
-    </p>
-    -->
-    <p>
-        <?php echo $this->__("If you have feedback, need assistance or would like to use this module, please send us an <a target=\"_blank\" href=\"mailto:enquiries@realtimedespatch.co.uk\">email</a>"); ?>.
+        <?php echo $this->__("Support for this module is provided to OrderFlow customers thorough the usual support process, if you are an existing OrderFlow customer and you require assistance with the module please create a ticket in the <a target=\"_blank\" href=\"https://support.realtimedespatch.co.uk\">support portal</a>"); ?>.
     </p>
 </div>
